--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,2 @@
-@import url(./components/heder.scss);
-@import url(./components/svg.scss);
+@import './components/heder.scss';
+@import './components/svg.scss';
