--- a/sass/components/svg.scss
+++ b/sass/components/svg.scss
@@ -15,8 +15,8 @@
 
 .icon {
     width: 200px;
-    border: 2px dashed #2a2a2a;
-    border-radius: 8px;
+    // border: 2px dashed #2a2a2a;
+    // border-radius: 8px;
     fill: #2a2a2a;
 }
 
