--- a/sass/main.css
+++ b/sass/main.css
@@ -1,2 +1,20 @@
-@import url(./components/heder.scss);
-@import url(./components/svg.scss);/*# sourceMappingURL=main.css.map */
+.menu {
+  list-style: none;
+}
+
+.icon-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.icon {
+  width: 200px;
+  border: 2px dashed #2a2a2a;
+  border-radius: 8px;
+  fill: #2a2a2a;
+}
+
+.icon:hover {
+  fill: #03a9f4;
+}/*# sourceMappingURL=main.css.map */
