--- a/sass/main.css
+++ b/sass/main.css
@@ -1,8 +1,35 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,600;1,600&display=swap");
+body {
+  padding: 0px;
+  margin: 0px;
+}
+
+.container {
+  width: 1240px;
+  margin: 0 auto;
+}
+
 .menu {
+  padding-bottom: 26px;
+  margin-top: 0px;
   list-style: none;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 40px;
+  background-color: #F5EEE0;
+  margin-bottom: 0px;
+}
+
+.menu-link {
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  color: #705A66;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
 .icon-list {
@@ -12,10 +39,72 @@
 }
 
 .icon {
-  width: 200px;
-  fill: #2a2a2a;
+  width: 25px;
+  fill: #705A66;
+  margin-left: -250px;
 }
 
 .icon:hover {
   fill: #03a9f4;
+}
+
+.main {
+  background-color: #F5EEE0;
+  border-bottom: 5px solid rgb(255, 0, 0);
+  border: 1px solid white;
+  padding-bottom: 120px;
+}
+
+.main-title {
+  font-family: "Montserrat", sans-serif;
+  color: #705A66;
+  text-align: center;
+  font-size: 100px;
+  line-height: 110px;
+  font-weight: 600;
+  margin-top: 0px;
+}
+
+.pudding {
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 378px;
+}
+
+.cakes {
+  margin-left: -153px;
+  margin-top: -709px;
+}
+
+.hardening {
+  margin-bottom: 146px;
+}
+
+.circlet {
+  margin-left: 83px;
+}
+
+.contact {
+  width: 25px;
+  height: 25px;
+}
+
+.vraper-social {
+  display: flex;
+  margin-top: -474px;
+  margin-left: 833px;
+}
+
+.social-list {
+  list-style: none;
+  flex-direction: column;
+  display: flex;
+  gap: 20px;
+}
+
+.main-description-social {
+  font-family: "Montserrat", sans-serif;
+  color: #705A66;
+  font-size: 16px;
+  width: 287px;
 }/*# sourceMappingURL=main.css.map */
