--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,7 @@
 @import './components/heder.scss';
 @import './components/svg.scss';
 @import './components/main';
+@import './components/galery.scss';
+@import './components/bestsaller';
+@import './components/grann';
+@import './components/delivery';
