--- a/sass/main.css
+++ b/sass/main.css
@@ -8,6 +8,9 @@ body {
 .container {
   width: 1240px;
   margin: 0 auto;
+  border: 1px solid red;
+  overflow: hidden;
+  margin-bottom: 120px;
 }
 
 .menu {
@@ -46,6 +49,11 @@ body {
 
 .icon:hover {
   fill: #03a9f4;
+}
+
+.icon-card {
+  width: 25px;
+  fill: #705A66;
 }
 
 .main {
@@ -107,4 +115,227 @@ body {
   color: #705A66;
   font-size: 16px;
   width: 287px;
+}
+
+.galery-photo {
+  list-style: none;
+}
+
+.galery-img {
+  width: 500px;
+  height: auto;
+}
+
+.thumb {
+  position: relative;
+  margin: 10px;
+  border-radius: 4px;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.thumb > .label-list {
+  bottom: -37;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 14px 97px;
+  border-bottom-left-radius: 4px;
+  line-height: 32px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  background-color: #F5EEE0;
+  color: #705A66;
+  text-align: center;
+}
+
+.galery-name {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  flex-basis: calc(50% - 10px);
+}
+
+.galery-btn {
+  border-radius: 25px;
+  display: flex;
+  margin-left: 153px;
+  width: 276px;
+  margin-top: -51px;
+  position: relative;
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  background-color: #F5EEE0;
+  color: #705A66;
+  text-align: center;
+}
+
+.label-list {
+  margin-left: 100px;
+}
+
+.galery-btn-arrow {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -78px;
+  margin-left: 386px;
+}
+
+.bestsaller {
+  display: flex;
+}
+
+.bestsaller-arrow-img {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.bestsaller-img {
+  width: 340px;
+}
+
+.bestsaller-arrows {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  gap: 32px;
+  margin-right: 50px;
+}
+
+.bestsaller-name {
+  display: flex;
+  justify-content: space-around;
+  gap: 32px;
+}
+
+.bestsaller-photo {
+  list-style: none;
+}
+
+.bestsaller-text {
+  color: #705A66;
+  font-family: "Montserrat", sans-serif;
+  line-height: 32px;
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.bestsaller-text-shop {
+  display: flex;
+  justify-content: space-between;
+}
+
+.bestsaller-price {
+  color: #705A66;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.bestsaller-img-caramel {
+  height: 340px;
+}
+
+.bestsaller-button {
+  font-family: "Montserrat", sans-serif;
+  color: #705A66;
+  font-size: 24px;
+  background-color: #F5EEE0;
+  padding: 20px 80px;
+  border-radius: 10px;
+  margin-top: 82px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.bestsaller-button:hover {
+  background-color: #DDD5C6;
+}
+
+.bestsaller-button-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.grann {
+  display: flex;
+}
+
+.grann-main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
+}
+
+.grann-photo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 305px;
+}
+
+.grann-text {
+  font-family: "Montserrat", sans-serif;
+  color: #705A66;
+}
+
+.grann-photo-ingredient {
+  display: flex;
+  margin-left: 100px;
+}
+
+.grann-photo-down {
+  width: 1600px;
+  height: 700px;
+  margin-top: -120px;
+  margin-left: 150px;
+}
+
+.delivery-title {
+  list-style: none;
+}
+
+.delivery-name {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
+  margin-top: 64px;
+}
+
+.delivery-photo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.delivery-text {
+  font-family: "Montserrat", sans-serif;
+  line-height: 32px;
+  font-size: 24px;
+  color: #705A66;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+}
+
+.delivery-description {
+  font-family: "Montserrat", sans-serif;
+  color: #705A66;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+}
+
+.delivery-text-badges {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }/*# sourceMappingURL=main.css.map */
