css дизайн першої сторінки по секцціяям

--- a/sass/components/_delivery.scss
+++ b/sass/components/_delivery.scss
@@ -1,5 +1,6 @@
 .delivery-title {
     list-style: none;
+    padding: 0px 106px 0px 106px;
 }
 
 .delivery-name {
@@ -25,6 +26,7 @@
     align-items: center;
     justify-content: center;
     text-transform: uppercase;
+    font-weight: 500;
 }
 
 .delivery-description {
