--- a/sass/components/_grann.scss
+++ b/sass/components/_grann.scss
@@ -26,12 +26,12 @@
      margin-left: 100px;
  }
 
- .grann-photo-down {
-     width: 1600px;
-     height: 700px;
-     margin-top: -120px;
-     //  display: flex;
-     //  align-items: center;
-     //  justify-content: center;
-     margin-left: 150px;
- }
+//  .grann-photo-down {
+//      width: 1600px;
+//      height: 700px;
+//      margin-top: -120px;
+//      //  display: flex;
+//      //  align-items: center;
+//      //  justify-content: center;
+//      margin-left: 150px;
+//  }
