--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,5 @@
 @import './components/bestsaller';
 @import './components/grann';
 @import './components/delivery';
+@import './components/about-me';
+@import './components/register';
