--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,7 @@
 @import './components/delivery';
 @import './components/about-me';
 @import './components/register';
+@import './components/signup';
+@import './components/question';
+@import './components/instagram';
+@import './components/footer';
