--- a/sass/components/_about-me.scss
+++ b/sass/components/_about-me.scss
@@ -41,10 +41,10 @@
     line-height: 32px;
     font-size: 24px;
     font-weight: 500;
+    margin-bottom: 0px;
 }
 
 .about-me-text {
-    // display: flex;
     font-family: "Montserrat", sans-serif;
     margin-left: 635px;
     margin-top: -539px;
