--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,3 +14,5 @@
 @import './components/question';
 @import './components/instagram';
 @import './components/footer';
+@import './components/catalog/catalog';
+@import './components/product/napoleon';
