--- a/sass/main.css
+++ b/sass/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,600;1,600&display=swap");
 body {
@@ -987,15 +986,16 @@ body {
   color: #705A66;
   line-height: 24px;
   font-size: 18px;
-  margin-left: -128px;
+  margin-left: -274px;
+  list-style: circle;
 }
 
 .product-btn-title {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  /* відстань між рядами */
   max-width: 500px;
+  margin-left: 14px;
 }
 
 .product-row {
@@ -1013,4 +1013,75 @@ body {
   background-color: #F5EEE0;
   color: #705A66;
   padding-left: 30px;
+}
+
+.product-btn-order {
+  font-family: "Montserrat", sans-serif;
+  line-height: 32px;
+  font-size: 24px;
+  background-color: #705A66;
+  color: #F5EEE0;
+  border-radius: 10px;
+  border: 1px solid white;
+  padding: 13px 50px 13px 50px;
+}
+
+.product-order-text {
+  display: flex;
+  width: 518px;
+  border: 1px solid red;
+  margin-top: 48px;
+  margin-left: 35px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-text {
+  border: 1px solid red;
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  color: #705A66;
+}
+
+.product-text-sale {
+  border: 1px solid red;
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  color: #705A66;
+  margin-left: -140px;
+}
+
+.product-switch {
+  display: flex;
+  align-items: center;
+  gap: 34px;
+  font-family: "Montserrat", sans-serif;
+  margin-left: 35px;
+  margin-top: 32px;
+}
+
+.product-page,
+.product-nav {
+  color: #705A66;
+  text-decoration: none;
+  font-size: 24px;
+  line-height: 32px;
+  border: none;
+  cursor: pointer;
+}
+
+.product-nav {
+  width: 35px;
+  height: 35px;
+  background-color: #705A66;
+  border-radius: 50%;
+  color: white;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+}
+
+.product-img {
+  display: flex;
+  flex-direction: column;
 }/*# sourceMappingURL=main.css.map */
